--- a/PhoneShop/PhoneShop/PhoneShop.csproj
+++ b/PhoneShop/PhoneShop/PhoneShop.csproj
@@ -129,6 +129,7 @@
     <Compile Include="code\enums.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SharedController.cs" />
     <Compile Include="Global.asax.cs">
@@ -150,16 +151,47 @@
     <Compile Include="Migrations\202004070836260_inititalizedv4.Designer.cs">
       <DependentUpon>202004070836260_inititalizedv4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004091814280_member.cs" />
+    <Compile Include="Migrations\202004091814280_member.Designer.cs">
+      <DependentUpon>202004091814280_member.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004091820234_memberV2.cs" />
+    <Compile Include="Migrations\202004091820234_memberV2.Designer.cs">
+      <DependentUpon>202004091820234_memberV2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004091828246_memberV3.cs" />
+    <Compile Include="Migrations\202004091828246_memberV3.Designer.cs">
+      <DependentUpon>202004091828246_memberV3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004101321504_memberV4.cs" />
+    <Compile Include="Migrations\202004101321504_memberV4.Designer.cs">
+      <DependentUpon>202004101321504_memberV4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004101437395_memberRemovePhone.cs" />
+    <Compile Include="Migrations\202004101437395_memberRemovePhone.Designer.cs">
+      <DependentUpon>202004101437395_memberRemovePhone.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004121027428_addOrderAndOrderItem.cs" />
+    <Compile Include="Migrations\202004121027428_addOrderAndOrderItem.Designer.cs">
+      <DependentUpon>202004121027428_addOrderAndOrderItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\PhoneShopContext.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\MemberService.cs" />
+    <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\MemberViewModel.cs" />
+    <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
     <Compile Include="ViewModels\SharedViewModel.cs" />
   </ItemGroup>
@@ -178,6 +210,7 @@
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -206,6 +239,12 @@
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Product\Edit.cshtml" />
     <Content Include="Views\Home\FilterProducts.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\ShoppingCart.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Order\OrderTable.cshtml" />
+    <Content Include="Views\Order\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -231,6 +270,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004070836260_inititalizedv4.resx">
       <DependentUpon>202004070836260_inititalizedv4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004091814280_member.resx">
+      <DependentUpon>202004091814280_member.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004091820234_memberV2.resx">
+      <DependentUpon>202004091820234_memberV2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004091828246_memberV3.resx">
+      <DependentUpon>202004091828246_memberV3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004101321504_memberV4.resx">
+      <DependentUpon>202004101321504_memberV4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004101437395_memberRemovePhone.resx">
+      <DependentUpon>202004101437395_memberRemovePhone.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004121027428_addOrderAndOrderItem.resx">
+      <DependentUpon>202004121027428_addOrderAndOrderItem.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
