更新產品資料內容。 修正產品列表換頁時的價格BUG。 補充註解。

--- a/PhoneShop/PhoneShop/PhoneShop.csproj
+++ b/PhoneShop/PhoneShop/PhoneShop.csproj
@@ -213,6 +213,7 @@
     <Content Include="Content\fonts\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\phoneshop - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\phoneshop - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\phoneshopmvc2020 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
